# deep-reinforcement-learning-gymnasium

./: README.md  pyproject.toml
data/: DQN_eval_mean_reward.csv  DQN_rollout_ep_rew_mean.csv  PPO_eval_mean_reward.csv  PPO_rollout_ep_rew_mean.csv  ex2_A2C_eval_mean_ep_len.csv  ex2_A2C_eval_mean_reward.csv  ex2_A2C_rollout_ep_len_mean.csv  ex2_A2C_rollout_ep_rew_mean.csv  ex2_DQN_eval_mean_ep_len.csv  ex2_DQN_eval_mean_reward.csv  ex2_DQN_rollout_ep_len_mean.csv  ex2_DQN_rollout_ep_rew_mean.csv  ex2_DQN_rollout_exploration_rate.csv  ex2_PPO_eval_mean_ep_len.csv  ex2_PPO_eval_mean_reward.csv  ex2_PPO_rollout_ep_len_mean.csv  ex2_PPO_rollout_ep_rew_mean.csv  ex3_A2C_eval_mean_ep_len.csv  ex3_A2C_eval_mean_reward.csv  ex3_A2C_rollout_ep_len_mean.csv  ex3_A2C_rollout_ep_rew_mean.csv
logs/exercise_1/: evaluations.npz
logs/exercise_1/dqn_tensorboard/DQN_1/: events.out.tfevents.1747030690.pocho.2577584.2
logs/exercise_2/a2c/: evaluations.npz
logs/exercise_2/dqn/: evaluations.npz
logs/exercise_2/ppo/: evaluations.npz
logs/exercise_3/: evaluations.npz
notebook/: exercise1_cartpole.ipynb  exercise2_lunarlander_a2c.ipynb  exercise2_lunarlander_a2c_hyperparameters.ipynb  exercise2_lunarlander_dqn.ipynb  exercise2_lunarlander_dqn_hyperparameters.ipynb  exercise2_lunarlander_ppo.ipynb  exercise2_lunarlander_ppo_hyperparameters.ipynb  exercise3_atari_breakout.ipynb
notebook/example/: SB3_cartpole.ipynb  ejemplo_cartpole.ipynb
plots/: exercise1_plots.py  exercise2_plots.py  exercise3_plots.py
(+30 files in other folders)
