[tool.poetry]
name = "deep-reinforcement-learning-gymnasium"
version = "0.1.0"
description = ""
authors = ["Javier Vela <javier.vela00@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
gymnasium = {extras = ["box2d"], version = "^1.1.1"}
stable-baselines3 = "^2.6.0"
tensorboard = "^2.19.0"
ipykernel = "^6.29.5"
opencv-python = "^4.11.0.86"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
standard-imghdr = "^3.13.0"
seaborn = "^0.13.2"
swig = "^4.3.1"
optuna = "^4.3.0"
sb3-contrib = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
